--- a/index.html
+++ b/index.html
@@ -17,35 +17,40 @@
     <link rel="stylesheet" href="./styles.css" type="text/css" />
   </head>
   <body>
-    <nav class="header-container">
-      <div>
-        <a href="#home">
-          <img src="./images/logo.svg" />
-        </a>
-      </div>
-      <ul class="nav-items">
-        <li>
-          <a href="#home">Home</a>
-        </li>
-        <li>
-          <a href="#about">About</a>
-        </li>
-        <li>
-          <a href="#contact">Contact</a>
-        </li>
-        <li>
-          <a href="#blog">Blog</a>
-        </li>
-        <li>
-          <a href="#careers">Careers</a>
-        </li>
-      </ul>
-      <div>
-        <button class="header-button">Request Invite</button>
+    <nav class="nav">
+      <div class="header-container">
+        <div>
+          <a href="#home">
+            <img src="./images/logo.svg" />
+          </a>
+        </div>
+        <ul class="nav-items">
+          <li>
+            <a href="#home">Home</a>
+          </li>
+          <li>
+            <a href="#about">About</a>
+          </li>
+          <li>
+            <a href="#contact">Contact</a>
+          </li>
+          <li>
+            <a href="#blog">Blog</a>
+          </li>
+          <li>
+            <a href="#careers">Careers</a>
+          </li>
+        </ul>
+        <div>
+          <button class="header-button">Request Invite</button>
+        </div>
       </div>
     </nav>
 
     <main>
+      <section>
+        <img class="img-hero" src="./images/bg-intro-desktop.svg" />
+      </section>
       <section class="hero-container">
         <div class="hero-section">
           <div class="hero-content">
@@ -58,74 +63,155 @@
             <button class="header-button">Request Invite</button>
           </div>
           <div class="hero-main-image">
-            <img class="hero-image" src="./images/bg-intro-desktop.svg" />
+            <img class="hero-image" src="./images/image-mockups.png" />
           </div>
         </div>
       </section>
       <section class="easy-bank">
         <div class="easy-bank-container">
-        <div class="why-easy-bank">
-          <h1>Why choose Easybank?</h1>
-          <p>
-            We leverage Open Banking to turn your bank account into your
-            financial hub. Control your finances like never before
-          </p>
+          <div class="why-easy-bank">
+            <h1>Why choose Easybank?</h1>
+            <p>
+              We leverage Open Banking to turn your bank account into your
+              financial hub. Control your finances like never before
+            </p>
+          </div>
+          <div class="easy-bank-card-container">
+            <div>
+              <img class="easy-bank-image" src="./images/icon-online.svg" />
+              <h3>Online Banking</h3>
+              <p>
+                Our modern web and mobile applications allow you to keep track
+                of your finances wherever you are in the world.
+              </p>
+            </div>
+            <div>
+              <img class="easy-bank-image" src="./images/icon-online.svg" />
+              <h3>Simple Budgeting</h3>
+              <p>
+                See exactly where your money goes each month. Receive
+                notifications when you’re close to hitting your limits.
+              </p>
+            </div>
+            <div>
+              <img class="easy-bank-image" src="./images/icon-online.svg" />
+              <h3>Fast Onboarding</h3>
+              <p>
+                We don’t do branches. Open your account in minutes online and
+                start taking control of your finances right away.
+              </p>
+            </div>
+            <div>
+              <img class="easy-bank-image" src="./images/icon-online.svg" />
+              <h3>Open API</h3>
+              <p>
+                Manage your savings, investments, pension, and much more from
+                one account. Tracking your money has never been easier.
+              </p>
+            </div>
+          </div>
         </div>
-        <div class="easy-bank-card-container">
-          <div>
-            <img class="easy-bank-image" src="./images/icon-online.svg" />
-            <h3>Online Banking</h3>
-            <p>
-              Our modern web and mobile applications allow you to keep track of
-              your finances wherever you are in the world.
-            </p>
+      </section>
+      <section>
+        <div class="latest-container">
+          <div class="easy-bank-container latest-container">
+            <div class="why-easy-bank">
+              <h1>Latest Articles</h1>
+            </div>
+            <div class="article-card-container">
+              <div class="latest-article">
+                <div class="latest-article-image">
+                  <img src="./images/image-currency.jpg" />
+                </div>
+                <div class="latest-article-content">
+                  <small> By Claire Robinson</small>
+                  <h3>Receive money in any currency with no fees</h3>
+                  <p>
+                    The world is getting smaller and we’re becoming more mobile.
+                    So why should you be forced to only receive money in a
+                    single
+                  </p>
+                </div>
+              </div>
+              <div class="latest-article">
+                <div class="latest-article-image">
+                  <img src="./images/image-restaurant.jpg" />
+                </div>
+                <div class="latest-article-content">
+                  <small> By Wilson Hutton</small>
+                  <h3>Treat yourself without worrying about money</h3>
+                  <p>
+                    Our simple budgeting feature allows you to separate out your
+                    spending and set realistic limits each month. That means you
+                  </p>
+                </div>
+              </div>
+              <div class="latest-article">
+                <div class="latest-article-image">
+                  <img src="./images/image-plane.jpg" />
+                </div>
+                <div class="latest-article-content">
+                  <small> By Wilson Hutton</small>
+                  <h3>Take your Easybank card wherever you go</h3>
+                  <p>
+                    We want you to enjoy your travels. This is why we don’t
+                    charge any fees on purchases while you’re abroad. We’ll even
+                    show you
+                  </p>
+                </div>
+              </div>
+              <div class="latest-article">
+                <div class="latest-article-image">
+                  <img src="./images/image-confetti.jpg" />
+                </div>
+                <div class="latest-article-content">
+                  <small> By Claire Robinson</small>
+                  <h3>Our invite-only Beta accounts are now live!</h3>
+                  <p>
+                    After a lot of hard work by the whole team, we’re excited to
+                    launch our closed beta. It’s easy to request an invite
+                    through the site
+                  </p>
+                </div>
+              </div>
+            </div>
           </div>
-          <div>
-            <img class="easy-bank-image" src="./images/icon-online.svg" />
-            <h3>Simple Budgeting</h3>
-            <p>
-              See exactly where your money goes each month. Receive
-              notifications when you’re close to hitting your limits.
-            </p>
-          </div>
-          <div>
-            <img class="easy-bank-image" src="./images/icon-online.svg" />
-            <h3>Fast Onboarding</h3>
-            <p>
-              We don’t do branches. Open your account in minutes online and
-              start taking control of your finances right away.
-            </p>
-          </div>
-          <div>
-            <img class="easy-bank-image" src="./images/icon-online.svg" />
-            <h3>Open API</h3>
-            <p>
-              Manage your savings, investments, pension, and much more from one
-              account. Tracking your money has never been easier.
-            </p>
-          </div>
-        </div>
         </div>
       </section>
     </main>
-    Latest Articles By Claire Robinson Receive money in any currency with no
-    fees The world is getting smaller and we’re becoming more mobile. So why
-    should you be forced to only receive money in a single … By Wilson Hutton
-    Treat yourself without worrying about money Our simple budgeting feature
-    allows you to separate out your spending and set realistic limits each
-    month. That means you … By Wilson Hutton Take your Easybank card wherever
-    you go We want you to enjoy your travels. This is why we don’t charge any
-    fees on purchases while you’re abroad. We’ll even show you … By Claire
-    Robinson Our invite-only Beta accounts are now live! After a lot of hard
-    work by the whole team, we’re excited to launch our closed beta. It’s easy
-    to request an invite through the site ... About Us Contact Blog Careers
-    Support Privacy Policy Request Invite © Easybank. All Rights Reserved
-
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
-    </div>
+    <footer>
+      <div class="footer-container">
+        <div class="fotter-child-container">
+          <div class="footer-icons">
+            <img src="./images/logo.svg" alt="" />
+            <div class="social-icon">
+              <img src="./images/icon-facebook.svg" />
+              <img src="./images/icon-youtube.svg" />
+              <img src="./images/icon-twitter.svg" />
+              <img src="./images/icon-pinterest.svg" />
+              <img src="./images/icon-instagram.svg" />
+            </div>
+          </div>
+          <div class="footer-links-container">
+            <div class="footer-links">
+              <div class="footer-links-p">
+                <p>About Us</p>
+                <p>Contact</p>
+                <p>Blog</p>
+              </div>
+              <div class="footer-links-p">
+                <p>Careers</p>
+                <p>Support</p>
+                <p>Privacy Policy</p>
+              </div>
+            </div>
+          </div>
+          <div class="footer-button">
+            <button class="header-button">Request Invite</button>
+            <small>© Easybank. All Rights Reserved</small>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
